# welm

./: .gitignore  .gitmodules  CPPLINT.cfg  README.md  path.sh  requirements.txt  run.sh
data/: en_lexicon.txt
kaldi/: CMakeLists.txt  README.md
kaldi/base/: kaldi-error.cc  kaldi-error.h
kaldi/cmake/: openfst.cmake
kaldi/util/: kaldi-io.h
tools/: prepare_dict.py  word_segmentation.py
tools/fst/: compile_lexicon_token_fst.sh  make_tlg.sh
